fix hard to see hyperlinks in alert

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -5,3 +5,10 @@
 td#new {
 	background-color: #C1FFC1;
 }
+
+/* Min (Wed Dec 16 22:56:13 SGT 2015)
+ * Fix the div so hyperlinks show up better
+ */
+div.alert {
+	color: black;
+}
