--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -19,12 +19,15 @@ pre {
 }
 
 a {
-  color: #008080;
+  color: #008080; 
+/*  color: blue; */
   &:visited {
-    color: #004d4d;
+    color: #008080;
+/*  color: purple; */
   }
   &:hover {
-    color: #800000;
+    color: #800000; 
+/*  color: blue; */
   }
 }
 
